@@ -1,5 +1,13 @@
 2007-12-04  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (wireless_dialog_response_cb): ensure that the connection gets updated
+			when it's not a new connection
+		- (get_secrets_dialog_response_cb): don't nag the user about the CA cert
+			if they elected to ignore the warning
+
+2007-12-04  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/eap-method-peap.c
 	  src/wireless-security/eap-method-ttls.c
 		- (fill_connection): correctly handle & update the CA certificate
